--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f5f5f5;
+            background-color: #ffffff;
         }
 
         h1 {
